--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:ios": "react-native run-ios",
     "start:android": "react-native run-android",
     "test": "jest",
+    "test:coverage": "yarn test --coverage",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -14,9 +15,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-native-fontawesome": "^0.1.0",
     "@react-native-community/async-storage": "^1.6.1",
+    "@testing-library/react-hooks": "^2.0.1",
     "axios": "^0.19.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
+    "react-dom": "^16.9.0",
     "react-native": "0.60.5",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.4.1",
@@ -39,8 +44,5 @@
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.8.6"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
